[package]
name = "rs6502"
version = "0.1.0"
authors = ["Simon Whitehead <chemnova@gmail.com>"]
repository = "https://github.com/simon-whitehead/rs6502"
description = "A 6502 Microprocessor tool suite. Includes a Disassembler, Assembler and Emulator."
keywords = ["6502", "emulator", "emulate", "assembly"]
license = "MIT"

[dependencies]
byteorder = "*"